--- a/index.html.html
+++ b/index.html.html
@@ -1,3 +1,25 @@
+
 <html>
-hello world
+
+	<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>COOKWARE</title>
+		
+		<link href="styles.css" rel="stylesheet"/>
+
+	</head>
+	
+	<body>
+		<div>
+			<div class='hinh'>
+				<img src="C:\Users\MINHPC\Pictures/images.jpg" alt="">
+			</div>
+			
+			<div class='text'>
+				Text
+			</div>
+		</div>
+	</body>
+
+
 </html>
